# model_scoring_credit

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerignore  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: api.py  gui.py  predict_service.py  state_store.py
app/css/: style.css
data/prod_data/: expected_value.pkl  new_test_data_20Features.parquet
ml/model/: grid_fbeta_model_bundle.pkl  lgbm_bestmodel_fbeta10_bundle.pkl
ml/notebook/: Feature engineering & selection.ipynb  GridSearch_LGBM_fbeta.ipynb
ml/src/: functions.py  train.py
test/: conftest.py  test.py
